[package]

name = "tftpd"
version = "0.0.1"
authors = [ "Adam Young <adam@younglogic.com>" ]

[profile.dev]
opt-level = 0      # controls the `--opt-level` the compiler builds with
debug = true       # controls whether the compiler passes `-g`
rpath = false      # controls whether the compiler passes `-C rpath`
lto = false        # controls `-C lto` for binaries and staticlibs
debug-assertions = true # controls whether debug assertions are enabled
codegen-units = 1  #

[dependencies]
byteorder = "0.5.1"
